# multi-threaded-multi-client-one-server-chat-cpp

client/: CMakeLists.txt  main.cpp
client/logs/: 20230106-1339-Sems.txt  20230106-1341-Esra.txt  20230106-1342-Seher.txt  20230107-1239-Ahmet.txt  20230107-1242-Selim.txt
server/: CMakeLists.txt  main.cpp
